bindings/go/marketdata/marketdata_uniffi.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V6 in this file.           ⚠️

typedef struct RustBuffer {
	uint64_t capacity;
	uint64_t len;
	uint8_t *data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
	int8_t code;
	RustBuffer errorBuf;
} RustCallStatus;
typedef void (*UniffiCallbackInterfaceFree)(uint64_t handle);
typedef struct UniffiForeignFutureStructRustBuffer {
    RustBuffer returnValue;
    RustCallStatus callStatus;
} UniffiForeignFutureStructRustBuffer;
typedef void (*UniffiForeignFutureCompleteRustBuffer)(uint64_t callback_data, UniffiForeignFutureStructRustBuffer result);
typedef struct UniffiForeignFutureStructVoid {
    RustCallStatus callStatus;
} UniffiForeignFutureStructVoid;
typedef void (*UniffiForeignFutureCompleteVoid)(uint64_t callback_data, UniffiForeignFutureStructVoid result);
typedef void (*UniffiCallbackInterfaceWebSocketListenerMethod0)(uint64_t uniffi_handle, void* uniffi_out_return, RustCallStatus* callStatus );
typedef void (*UniffiCallbackInterfaceWebSocketListenerMethod1)(uint64_t uniffi_handle, RustBuffer data_json, void* uniffi_out_return, RustCallStatus* callStatus );
typedef void (*UniffiCallbackInterfaceWebSocketListenerMethod2)(uint64_t uniffi_handle, RustBuffer data_json, void* uniffi_out_return, RustCallStatus* callStatus );
typedef void (*UniffiCallbackInterfaceWebSocketListenerMethod3)(uint64_t uniffi_handle, int8_t will_reconnect, void* uniffi_out_return, RustCallStatus* callStatus );
typedef void (*UniffiCallbackInterfaceWebSocketListenerMethod4)(uint64_t uniffi_handle, RustBuffer message, void* uniffi_out_return, RustCallStatus* callStatus );
typedef void (*UniffiCallbackInterfaceWebSocketListenerMethod5)(uint64_t uniffi_handle, RustBuffer error_message, void* uniffi_out_return, RustCallStatus* callStatus );
typedef void (*UniffiCallbackInterfaceWebSocketListenerMethod6)(uint64_t uniffi_handle, uint32_t attempt, void* uniffi_out_return, RustCallStatus* callStatus );
typedef void (*UniffiCallbackInterfaceWebSocketListenerMethod7)(uint64_t uniffi_handle, uint32_t attempts, void* uniffi_out_return, RustCallStatus* callStatus );
typedef void (*UniffiCallbackInterfaceWebSocketListenerMethod8)(uint64_t uniffi_handle, uint64_t count, void* uniffi_out_return, RustCallStatus* callStatus );
typedef struct UniffiVTableCallbackInterfaceWebSocketListener {
    UniffiCallbackInterfaceWebSocketListenerMethod0 onConnected;
    UniffiCallbackInterfaceWebSocketListenerMethod1 onAuthenticated;
    UniffiCallbackInterfaceWebSocketListenerMethod2 onUnauthenticated;
    UniffiCallbackInterfaceWebSocketListenerMethod3 onDisconnected;
    UniffiCallbackInterfaceWebSocketListenerMethod4 onMessage;
    UniffiCallbackInterfaceWebSocketListenerMethod5 onError;
    UniffiCallbackInterfaceWebSocketListenerMethod6 onReconnecting;
    UniffiCallbackInterfaceWebSocketListenerMethod7 onReconnectFailed;
    UniffiCallbackInterfaceWebSocketListenerMethod8 onMessagesDropped;
    UniffiCallbackInterfaceFree uniffiFree;
} UniffiVTableCallbackInterfaceWebSocketListener;
void* uniffi_marketdata_uniffi_fn_clone_futoptclient(void* ptr, RustCallStatus *out_status
);
void uniffi_marketdata_uniffi_fn_free_futoptclient(void* ptr, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_method_futoptclient_historical(void* ptr, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_method_futoptclient_intraday(void* ptr, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_clone_futopthistoricalclient(void* ptr, RustCallStatus *out_status
);
void uniffi_marketdata_uniffi_fn_free_futopthistoricalclient(void* ptr, RustCallStatus *out_status
);
RustBuffer uniffi_marketdata_uniffi_fn_method_futopthistoricalclient_candles_sync(void* ptr, RustBuffer symbol, RustBuffer from, RustBuffer to, RustBuffer timeframe, int8_t after_hours, RustBuffer contract_month, RustBuffer fields, RustBuffer sort, RustCallStatus *out_status
);
RustBuffer uniffi_marketdata_uniffi_fn_method_futopthistoricalclient_daily_sync(void* ptr, RustBuffer symbol, RustBuffer date, int8_t after_hours, RustCallStatus *out_status
);
uint64_t uniffi_marketdata_uniffi_fn_method_futopthistoricalclient_get_candles(void* ptr, RustBuffer symbol, RustBuffer from, RustBuffer to, RustBuffer timeframe, int8_t after_hours, RustBuffer contract_month, RustBuffer fields, RustBuffer sort
);
uint64_t uniffi_marketdata_uniffi_fn_method_futopthistoricalclient_get_daily(void* ptr, RustBuffer symbol, RustBuffer date, int8_t after_hours
);
void* uniffi_marketdata_uniffi_fn_clone_futoptintradayclient(void* ptr, RustCallStatus *out_status
);
void uniffi_marketdata_uniffi_fn_free_futoptintradayclient(void* ptr, RustCallStatus *out_status
);
RustBuffer uniffi_marketdata_uniffi_fn_method_futoptintradayclient_candles_sync(void* ptr, RustBuffer symbol, RustBuffer timeframe, RustCallStatus *out_status
);
uint64_t uniffi_marketdata_uniffi_fn_method_futoptintradayclient_get_candles(void* ptr, RustBuffer symbol, RustBuffer timeframe
);
uint64_t uniffi_marketdata_uniffi_fn_method_futoptintradayclient_get_products(void* ptr, RustBuffer typ
);
uint64_t uniffi_marketdata_uniffi_fn_method_futoptintradayclient_get_quote(void* ptr, RustBuffer symbol, int8_t after_hours
);
uint64_t uniffi_marketdata_uniffi_fn_method_futoptintradayclient_get_ticker(void* ptr, RustBuffer symbol, int8_t after_hours
);
uint64_t uniffi_marketdata_uniffi_fn_method_futoptintradayclient_get_tickers(void* ptr, RustBuffer typ, RustBuffer is_spread
);
uint64_t uniffi_marketdata_uniffi_fn_method_futoptintradayclient_get_trades(void* ptr, RustBuffer symbol
);
uint64_t uniffi_marketdata_uniffi_fn_method_futoptintradayclient_get_volumes(void* ptr, RustBuffer symbol
);
RustBuffer uniffi_marketdata_uniffi_fn_method_futoptintradayclient_products_sync(void* ptr, RustBuffer typ, RustCallStatus *out_status
);
RustBuffer uniffi_marketdata_uniffi_fn_method_futoptintradayclient_quote_sync(void* ptr, RustBuffer symbol, int8_t after_hours, RustCallStatus *out_status
);
RustBuffer uniffi_marketdata_uniffi_fn_method_futoptintradayclient_ticker_sync(void* ptr, RustBuffer symbol, int8_t after_hours, RustCallStatus *out_status
);
RustBuffer uniffi_marketdata_uniffi_fn_method_futoptintradayclient_tickers_sync(void* ptr, RustBuffer typ, RustBuffer is_spread, RustCallStatus *out_status
);
RustBuffer uniffi_marketdata_uniffi_fn_method_futoptintradayclient_trades_sync(void* ptr, RustBuffer symbol, RustCallStatus *out_status
);
RustBuffer uniffi_marketdata_uniffi_fn_method_futoptintradayclient_volumes_sync(void* ptr, RustBuffer symbol, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_clone_restclient(void* ptr, RustCallStatus *out_status
);
void uniffi_marketdata_uniffi_fn_free_restclient(void* ptr, RustCallStatus *out_status
);
RustBuffer uniffi_marketdata_uniffi_fn_method_restclient_base_url(void* ptr, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_method_restclient_futopt(void* ptr, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_method_restclient_stock(void* ptr, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_clone_stockclient(void* ptr, RustCallStatus *out_status
);
void uniffi_marketdata_uniffi_fn_free_stockclient(void* ptr, RustCallStatus *out_status
);