bindings/csharp/MarketdataUniffi/marketdata_uniffi.cs


    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void UniffiForeignFutureCompleteRustBuffer(
        ulong @callbackData,
        _UniFFILib.UniffiForeignFutureStructRustBuffer @result
    );

    [StructLayout(LayoutKind.Sequential)]
    public struct UniffiForeignFutureStructVoid
    {
        public UniffiRustCallStatus @callStatus;
    }

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void UniffiForeignFutureCompleteVoid(
        ulong @callbackData,
        _UniFFILib.UniffiForeignFutureStructVoid @result
    );

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void UniffiCallbackInterfaceWebSocketListenerMethod0(
        ulong @uniffiHandle,
        IntPtr @uniffiOutReturn,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void UniffiCallbackInterfaceWebSocketListenerMethod1(
        ulong @uniffiHandle,
        IntPtr @uniffiOutReturn,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void UniffiCallbackInterfaceWebSocketListenerMethod2(
        ulong @uniffiHandle,
        RustBuffer @message,
        IntPtr @uniffiOutReturn,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void UniffiCallbackInterfaceWebSocketListenerMethod3(
        ulong @uniffiHandle,
        RustBuffer @errorMessage,
        IntPtr @uniffiOutReturn,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void UniffiCallbackInterfaceWebSocketListenerMethod4(
        ulong @uniffiHandle,
        uint @attempt,
        IntPtr @uniffiOutReturn,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void UniffiCallbackInterfaceWebSocketListenerMethod5(
        ulong @uniffiHandle,
        uint @attempts,
        IntPtr @uniffiOutReturn,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [StructLayout(LayoutKind.Sequential)]
    public struct UniffiVTableCallbackInterfaceWebSocketListener
    {
        public IntPtr @onConnected;
        public IntPtr @onDisconnected;
        public IntPtr @onMessage;
        public IntPtr @onError;
        public IntPtr @onReconnecting;
        public IntPtr @onReconnectFailed;
        public IntPtr @uniffiFree;
    }

    static _UniFFILib()
    {
        _UniFFILib.uniffiCheckContractApiVersion();
        _UniFFILib.uniffiCheckApiChecksums();

        UniffiCallbackInterfaceWebSocketListener.Register();
    }

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_clone_futoptclient(
        IntPtr @ptr,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void uniffi_marketdata_uniffi_fn_free_futoptclient(
        IntPtr @ptr,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_futoptclient_historical(
        IntPtr @ptr,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_futoptclient_intraday(
        IntPtr @ptr,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_clone_futopthistoricalclient(
        IntPtr @ptr,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void uniffi_marketdata_uniffi_fn_free_futopthistoricalclient(
        IntPtr @ptr,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_marketdata_uniffi_fn_method_futopthistoricalclient_candles_sync(
        IntPtr @ptr,
        RustBuffer @symbol,
        RustBuffer @from,
        RustBuffer @to,
        RustBuffer @timeframe,
        sbyte @afterHours,
        RustBuffer @contractMonth,
        RustBuffer @fields,
        RustBuffer @sort,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_marketdata_uniffi_fn_method_futopthistoricalclient_daily_sync(
        IntPtr @ptr,
        RustBuffer @symbol,
        RustBuffer @date,
        sbyte @afterHours,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_futopthistoricalclient_get_candles(
        IntPtr @ptr,
        RustBuffer @symbol,
        RustBuffer @from,
        RustBuffer @to,
        RustBuffer @timeframe,
        sbyte @afterHours,
        RustBuffer @contractMonth,
        RustBuffer @fields,
        RustBuffer @sort
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_futopthistoricalclient_get_daily(
        IntPtr @ptr,
        RustBuffer @symbol,
        RustBuffer @date,
        sbyte @afterHours
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_clone_futoptintradayclient(
        IntPtr @ptr,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void uniffi_marketdata_uniffi_fn_free_futoptintradayclient(
        IntPtr @ptr,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_marketdata_uniffi_fn_method_futoptintradayclient_candles_sync(
        IntPtr @ptr,
        RustBuffer @symbol,
        RustBuffer @timeframe,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_futoptintradayclient_get_candles(
        IntPtr @ptr,
        RustBuffer @symbol,
        RustBuffer @timeframe
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_futoptintradayclient_get_products(
        IntPtr @ptr,
        RustBuffer @typ
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_futoptintradayclient_get_quote(
        IntPtr @ptr,
        RustBuffer @symbol,
        sbyte @afterHours
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_futoptintradayclient_get_ticker(
        IntPtr @ptr,
        RustBuffer @symbol,
        sbyte @afterHours
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_futoptintradayclient_get_tickers(
        IntPtr @ptr,
        RustBuffer @typ,
        RustBuffer @isSpread
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_futoptintradayclient_get_trades(
        IntPtr @ptr,
        RustBuffer @symbol
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_futoptintradayclient_get_volumes(
        IntPtr @ptr,
        RustBuffer @symbol
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_marketdata_uniffi_fn_method_futoptintradayclient_products_sync(
        IntPtr @ptr,
        RustBuffer @typ,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_marketdata_uniffi_fn_method_futoptintradayclient_quote_sync(
        IntPtr @ptr,
        RustBuffer @symbol,
        sbyte @afterHours,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_marketdata_uniffi_fn_method_futoptintradayclient_ticker_sync(
        IntPtr @ptr,
        RustBuffer @symbol,
        sbyte @afterHours,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_marketdata_uniffi_fn_method_futoptintradayclient_tickers_sync(
        IntPtr @ptr,
        RustBuffer @typ,
        RustBuffer @isSpread,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_marketdata_uniffi_fn_method_futoptintradayclient_trades_sync(
        IntPtr @ptr,
        RustBuffer @symbol,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_marketdata_uniffi_fn_method_futoptintradayclient_volumes_sync(
        IntPtr @ptr,
        RustBuffer @symbol,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_clone_restclient(
        IntPtr @ptr,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void uniffi_marketdata_uniffi_fn_free_restclient(
        IntPtr @ptr,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_marketdata_uniffi_fn_method_restclient_base_url(
        IntPtr @ptr,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_restclient_futopt(
        IntPtr @ptr,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_restclient_stock(
        IntPtr @ptr,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_clone_stockclient(
        IntPtr @ptr,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void uniffi_marketdata_uniffi_fn_free_stockclient(
        IntPtr @ptr,
        ref UniffiRustCallStatus _uniffi_out_err
    );
